# wuyu-lang

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/examples/: 盤古.🐲  質數.🐲
src/: ast.h  codegen.h  compiler.h  jit.h  keywords.h  lexer.h  main.cpp  parser.h  runtime.cpp  token.h
src/utils/: numbers.cpp  numbers.h
tests/: array.wuyu  class.wuyu  factorial.wuyu  fibonacci.wuyu  hello.wuyu  loop.wuyu  primes.wuyu  recursion.wuyu
典/: README.md
